fix bug in remove-x visibility

--- a/css/style.css
+++ b/css/style.css
@@ -226,9 +226,9 @@ input[type=range] {
     background: #57595A;
 }
  
-#prereq-list > li.deactivated > a.remove {
+/*#prereq-list > li.deactivated > a.remove {
     display: none;
-}
+}*/
 #prereq-list > li > a.remove {
     float: right;
     padding-right: 2em;
